# nonce

./: .gitignore  README.md
impl/: dir.txt
impl/barebone/: .gitignore  Cargo.toml
impl/barebone/src/: Makefile  main.rs
impl/barebone/src/pleb/: logger.rs
impl/barefoot/: servebarefoot.py
impl/barefoot/var/www/: barefoot.js  index.html
impl/indus/: Cargo.toml
impl/indus/qual/curl/: auth_simple.sh  indus_top.sh  webfinger.sh
impl/indus/qual/http-vertex/: q1.rs
impl/indus/src/: Makefile  main.rs
impl/indus/src/basic/http/: auth_endpoint.rs  mod.rs
impl/indus/src/basic/http/node/: vertex.rs
impl/indus/src/core/: core.rs  tests.rs
impl/indus/src/oidc10/: mod.rs
impl/indus/src/oidc10/discovery/: config.rs  tests.rs
impl/indus/src/pleb/: logger.rs
impl/indus/src/static/: basic.html  indus-consent.js  indus-style.css
impl/loiter/: loiter_secure.py  pkce.py
impl/loiter/var/www/: index.html  loiter-style.css  loiter-web-client.js  owner-signin.html
impl/peer/: peer-authz-server.py
impl/peer/var/www/: authn.html
nonce/guides-dev-vendors/: okta-guides.txt
nonce/ocen/: ocen-basics.txt
nonce/scraps/: NBFC-Account-Aggregators  definitions.txt  mtls-oauth-extensions-swadesh.txt  oauth2-oidc-hosting.txt  oidc-imple.txt  open-banking.txt  rust-impl-oidc-oauth2.txt  rust-jwk-jwt-creates.txt  sahamati-aa-eco-definitions.txt  sahamati.txt  trail-of-bits.txt
nonce/sql/: client.sql  oauth2.sql
nonce/tech/notes/: about-oauth2-software-statement.txt  about-oauth2-tokens.txt  authz-code-grant-001.txt  authz-endpoint-001.txt  authz-refresh-token.txt  authz-required-external.txt  client-registration-001.txt  indus-authz-pkce-impl-pseducode.txt  oath-remark-001.txt  oauth-dynamic-client-reg.txt  oauth-impl-questions-001.txt  oauth-oidc-helpful-xrefs.txt  oauth-profile-notes.txt  oauth2-parameters.txt  oauth2-yap.txt  oidc-authz-flow-001.txt  oidc-dyn-client-registration.txt  oidc-oauth-remark-002.txt  saml-assertions-claims.txt  token-introspection.txt  token-revocation.txt  tokens-in-the-wild.txt
