[package]
name = "barebone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = false
authors = ["The Indus Project Developers"]

[dependencies]
log = "0.4"
env_logger = "0.9.0"
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
hyper = { version="0.14", features = ["http1", "http2", "server", "tcp", "runtime", "stream"] }
#serde = { version = "1", features = ["derive"] }
#serde_json = "1"
#either = "1"
#anyhow="1"
#thiserror="1"
#tinyvec="1"
#bytes = "1"
#headers = "0.*"
#chrono = "0.*"
#base64 = "0.*"
#rand = "0.8"
#jsonwebtoken = "7"
#jws = "0.2"
#hmac = "0.11"
#ring = "0"
#data-encoding = "2"
