[package]
name = "barebone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

publish = false
authors = ["The Indus Project Developers"]

[dependencies]
log = "0.4"
env_logger = "0.9.0"
# just enough features for running "async main"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
bytes = { version = "1" }
url = { version = "2", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hyper = { version="0.14", features = ["http1", "http2", "server", "tcp", "runtime", "stream"] }
#data-encoding = "2"
