[package]
name = "indus"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["The Indus Project Developers"]

[dependencies]
either = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#anyhow="1"
#thiserror="1"
#tinyvec="1"
#bytes = "1"
#headers = "0.*"
#chrono = "0.*"
#base64 = "0.*"
#rand = "0.8"
#jsonwebtoken = "7"
#jws = "0.2"
#hmac = "0.11"
log = "0.4"
env_logger = "0.9.0"
ring = "0"
data-encoding = "2"
